fixed bugs with scroll on mobiles

--- a/src/components/imageSlider/imageSlider.scss
+++ b/src/components/imageSlider/imageSlider.scss
@@ -19,6 +19,9 @@
         &::-webkit-scrollbar {
         display: none;
         }
+        @media(max-width:1192px){
+            display: none;
+        }
     }
 }
 .slider-container{
@@ -27,8 +30,11 @@
     cursor: grab;
     overflow: hidden;
 
+    
+}
 
-
+.slider-container.is-touching{
+    touch-action: none;
 }
 .slide-item{
     position: relative;
@@ -72,4 +78,8 @@
 .slider-container.active{
 cursor: grabbing;
 
+}
+
+.slider-container.phoneSlide{
+    touch-action: none;
 }
